# Mayuri

./: .gitignore  Dockerfile  Procfile  README.md  TODO.md  app.json  generate_pynacl_key.py  heroku.yml  okteto-compose.yaml  pyproject.toml  requirements-docker.txt  requirements.txt  restore.py  sample_config.toml  session_maker.py  string_session.py
mayuri/: __init__.py  __main__.py  mayuri.py  sample_config.py
mayuri/db/: admin.py  approve.py  blacklist.py  blpack.py  blsticker.py  disable.py  filters.py  global_restrict.py  lang.py  settings.py  sudo.py  verify.py  welcome.py
mayuri/lang/: __init__.py  en.py  id.py
mayuri/modules/: __init__.py  admin.py  alive.py  anime.py  anti_ubot.py  approve.py  blacklist.py  blimg.py  blpack.py  blstickers.py  disableable.py  filters.py  globals.py  help.py  sed.py  stickers.py  sudo.py  zlast.py  zombies.py  zzlast.py
mayuri/modules/helper/: misc.py  string.py  time.py
mayuri/modules/sql/: anti_ubot.py  approve.py  blacklist.py  blimg.py  blpack.py  blstickers.py  disableable.py  filters.py  globals_sql.py  sudo.py
mayuri/plugins/: __init__.py  admin.py  anime.py  blacklist.py  blacklist_pack.py  blacklist_sticker.py  captcha.py  dev.py  disable.py  filters.py  global_restrict.py  misc.py  raw.py  rules.py  stickers.py  sudo.py  welcome.py
mayuri/util/: backup.py  filters.py  misc.py  string.py  time.py
mayuri/utils/: filters.py  lang.py  misc.py  string.py  time.py
