[tool.poetry]
name = "mayuri"
version = "3.0.0"
description = "Modular Telegram Bot based on PyroFork"
license = "GPL-3.0-or-later"
authors = ["wulan17 <wulan17@nusantararom.org>"]
readme = "README.md"
repository = "https://github.com/Mayuri-Chan/Mayuri"

[tool.poetry.dependencies]
python = "~=3.9"
async-pymongo = "0.1.3"
uvloop = "^0.19.0"
python-dotenv = "^1.0.0"
tgcrypto = "^1.2.5"
httpx = {extras = ["http2"], version = "^0.26.0"}
colorlog = "^6.8.0"
meval = "^2.5"
apscheduler = {git = "https://github.com/agronholm/apscheduler.git", rev = "master"}
pyrofork = "2.4.0"
tomli = "^2.0.1"
opencv-python = "^4.8.1.78"
unidecode = "^1.3.8"
pytesseract = "^0.3.10"
pynacl = ">=1.5.0,<2.0.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
